--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,5 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: go get -u github.com/golang/lint/golint 
       - run: make build
